# ASC-ODE

./: .gitmodules  CMakeLists.txt
demos/: test_RK.cc  test_alpha.cc  test_alpha_2.cc  test_newmark.cc  test_ode.cc
mass_spring/: CMakeLists.txt  mass_spring.cc  mass_spring.h
py_tests/: output.txt  output_alpha.txt  output_alpha_2.txt  output_circuit.txt  output_ee.txt  output_ie.txt  output_newmark.txt  output_rad.txt  output_rk.txt  plot.py  plot_alpha_2.py  plot_newmark_alpha.py
src/: Newton.h  nonlinfunc.h  ode.h
